<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="activity_main">
    <group
        android:checkableBehavior="single"
        android:enabled="true"
        android:visible="true">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/carrera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_viajes"
            android:icon="@drawable/viajes"
            android:title="@string/menu_tusViajes" />
        <item
            android:id="@+id/nav_mensajes"
            android:icon="@drawable/correo"
            android:title="@string/menu_mensajes"
            app:actionLayout="@layout/my_counter"/>
        <item
            android:id="@+id/nav_datos"
            android:icon="@drawable/datos"
            android:title="@string/menu_datos" />
        <item
            android:id="@+id/nav_vehiculos"
            android:icon="@drawable/vehiculo"
            android:title="@string/menu_vehiculos" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/chat"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/navigation_subheader"
            android:title="@string/menu_otras">
            <menu>
                <item
                    android:id="@+id/nav_cerrarSesion"
                    android:icon="@drawable/apagar"
                    android:title="@string/menu_cerrarSesion" />
            </menu>
        </item>
    </group>
</menu>
