<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".vistas.VentanaLogin">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/linearLayoutInicioSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation_logo_coche"
                android:layout_width="380dp"
                android:layout_height="188.1dp"
                android:layout_gravity="center_horizontal"
                app:lottie_autoPlay="true"
                app:lottie_fileName="animacion_logo_coche_felis.json"
                app:lottie_imageAssetsFolder="assets"
                app:lottie_loop="true" />

            <EditText
                android:id="@+id/editTextUsuarioInicioSesion"
                style="@android:style/Widget.Holo.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/layout_drawable_2"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="5dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/edit_email_ventanaLogin"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:singleLine="true"
                android:textColor="@color/places_ui_default_primary_dark"
                android:textColorHint="@color/colorGrisLight"
                android:textStyle="normal"
                android:drawableStart="@drawable/ic_email" />

            <TextView
                android:id="@+id/textViewErrorUsuarioInicioSesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="5dp"
                android:text=""
                android:textColor="@color/colorBlanco"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <EditText
                android:id="@+id/editTextClaveInicioSesion"
                style="@android:style/Widget.Holo.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/layout_drawable_2"
                android:drawableLeft="@drawable/ic_clave"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/edit_clave_ventanaLogin"
                android:inputType="textPassword"
                android:padding="8dp"
                android:singleLine="true"
                android:textColor="@color/places_ui_default_primary_dark"
                android:textColorHint="@color/colorGrisLight"
                android:textStyle="normal"
                android:drawableStart="@drawable/ic_clave" />

            <TextView
                android:id="@+id/textViewErrorClaveInicioSesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="5dp"
                android:text=""
                android:textColor="@color/colorBlanco"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textViewOlvidasteTuClaveInicioSesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onClick"
                android:text="@string/txt_olvidasteClave_ventanaLogin"
                android:textColor="@color/colorBlanco"
                android:textSize="14sp" />

            <Button
                android:id="@+id/buttonLoginInicioSesion"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/layout_drawable_2"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:clickable="true"
                android:enabled="false"
                android:focusable="true"
                android:text="@string/bt_login_ventanaLogin"
                android:textColor="@color/colorGris"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewNoCuentaInicioSesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:text="@string/txt_informativoRegistro_ventanaLogin"
                android:textColor="@color/colorBlanco"
                android:textSize="14sp" />

            <Button
                android:id="@+id/buttonRegistrarInicioSesion"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/layout_drawable_2"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/bt_registrar_ventanaLogin"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>