<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayoutPrincipalFragmentHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:paddingEnd="15dp"
            android:paddingRight="15dp">

            <TextView
                android:id="@+id/textViewMensajeFragmentHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:text="@string/txt_informativo_ventanaHomeFragment"
                android:textColor="@color/cardview_light_background"
                android:textSize="30sp" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animacionFragmentHome"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="25dp"
                android:layout_gravity="center_horizontal"
                app:lottie_autoPlay="true"
                app:lottie_fileName="buscar.json"
                app:lottie_imageAssetsFolder="assets"
                app:lottie_loop="true" />

            <Button
                android:id="@+id/buttonPublicarViajeFragmentHome"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/layout_drawable_2"
                android:clickable="true"
                android:text="@string/bt_publicar_ventanaHomeFragment"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                android:focusable="true" />

            <Button
                android:id="@+id/buttonBuscarViajeFragmentHome"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:background="@drawable/layout_drawable_2"
                android:clickable="true"
                android:text="@string/bt_buscar_ventanaHomeFragment"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                android:focusable="true"  />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>