<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@drawable/layout_drawable_1"    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:gravity="center"
            android:text="BUSCAR VIAJE"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlanco"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ETOrigen"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_background"
            android:hint="@string/Publicarviaje_Origen"
            android:paddingLeft="15dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/ETDestino"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_background"
            android:hint="@string/Publicarviaje_Destino"
            android:paddingLeft="15dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/ETFecha"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_background"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/Publicarviaje_Fecha"
            android:inputType="date"
            android:maxLines="1"
            android:paddingLeft="15dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.337" />

        <EditText
            android:id="@+id/ETHora"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/button_background"
            android:clickable="true"
            android:focusable="false"
            android:hint="Hora"
            android:inputType="time"
            android:maxLines="1"
            android:paddingLeft="15dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.418" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlanco"
        android:gravity="end"
        android:orientation="horizontal"
        android:textAlignment="textEnd">

        <Button
            android:id="@+id/BTBuscarDialog"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@color/colorBlanco"
            android:text="@string/buscar"
            android:textColor="@color/quantum_googgreen800"
            android:layout_marginTop="10dp"/>

    </LinearLayout>



</LinearLayout>